--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- MVP.css quickstart template: https://github.com/andybrewer/mvp/ -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +10,7 @@
     <meta name="description" content="Sagar K">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>My title</title>
+    <title>Sagar K</title>
 </head>
 
 <body>
