--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiL5VcuGjn2CKL91aMslTU2D7F7Kv-VaTBOWv3znRmXFxR0rfor7PtMa5zD1JxA7KjrAWxHiJglgxkIamH-IYv1DpghutrNB3oA8x0JcX3Pd23DnoIZ83ceGPPsHxq5r8Wr_26wk4LHLjAc57tEXJTUVNJHBa_xIlkXCFifW3JTHKyAqOy-EIEbnWXSTg/s320/profile-pic%20for%20web-modified.png=s150">
+    <link rel="icon" href="/sagar%20copy%2011.jpg">
     <link rel="stylesheet" href="./index.css">
 
     <meta charset="utf-8">
