--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a href="/"><img alt="Logo" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiL5VcuGjn2CKL91aMslTU2D7F7Kv-VaTBOWv3znRmXFxR0rfor7PtMa5zD1JxA7KjrAWxHiJglgxkIamH-IYv1DpghutrNB3oA8x0JcX3Pd23DnoIZ83ceGPPsHxq5r8Wr_26wk4LHLjAc57tEXJTUVNJHBa_xIlkXCFifW3JTHKyAqOy-EIEbnWXSTg/s320/profile-pic%20for%20web-modified.png=s150" height="70"></a>
+            <a href="/"><img alt="Logo" src="/sagar%20copy%2011.jpg"></a>
             <ul>
                 <li>About Me </li>
                 <li><a href="#section-1">Services</a></li>
