--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a href="/"><img alt="Logo" src="/sagar%20copy%2011.jpg"></a>
+            <a href="/"><img alt="Logo" src="/sagar%20copy%2011.jpg=s150"></a>
             <ul>
                 <li>About Me </li>
                 <li><a href="#section-1">Services</a></li>
