--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1> <b>Sagar</b></i> <span class='notbold'>Khatiwada</span>  </h1>
         <p>Digital Strategist & Data Analyst </p>
         <br>
-        <p><a href="#"><i>Book a call </i></a><a href="#"><b> Contact Me &rarr;</b></a></p>
+        <p><a href="#"><i>Book a call </i></a><a href="https://calendly.com/sagarkhatiwada"><b> Contact Me &rarr;</b></a></p>
     </header>
     <main>
         <hr>
